--- a/FirstProject/nosotros.html
+++ b/FirstProject/nosotros.html
@@ -16,17 +16,23 @@
 
 <body>
     <header>
-            <h1 class="titulo">UlyssesDev <span>Freelancer</span></h1>
+        <h1 class="titulo">UlyssesDev <span>Freelancer</span></h1>
     </header>
 
-    <nav>
-        <a href="index.html">Inicio</a>
-        <a href="nosotros.html">Sobre mi</a>
-        <a href="#">Clientes</a>
-        <a href="#">Contacto</a>
-    </nav>
+    <div class="nav-background">
+        <nav class="navegacion-principal contenedor">
+            <a href="index.html">Inicio</a>
+            <a href="nosotros.html">Sobre mi</a>
+            <a href="#">Contacto</a>
+        </nav>
+    </div>
 
     <main>
+        <div>
+            <div>
+                
+            </div>
+        </div>
         <section>
             <h2>Sobre Mí</h2>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum quia quis culpa eveniet et veritatis,
