--- a/FirstProject/nosotros.html
+++ b/FirstProject/nosotros.html
@@ -27,36 +27,50 @@
         </nav>
     </div>
 
-    <main>
-        <div>
+    <main class="about-me">
+        <div class="aboutme-grid">
+            <section class="presentation">
+                <div class="picture-container">
+                    <h2>Programador FullStack</h2>
+                    <svg xmlns="http://www.w3.org/2000/svg" width="88" height="88" viewBox="0 0 24 24" fill="none"
+                        stroke="#ffc107" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round">
+                        <path d="M9 11a3 3 0 1 0 6 0a3 3 0 0 0 -6 0" />
+                        <path d="M17.657 16.657l-4.243 4.243a2 2 0 0 1 -2.827 0l-4.244 -4.243a8 8 0 1 1 11.314 0z" />
+                        <p>La Paz, BCS</p>
+                </div>
+            </section>
             <div>
-                
+                <section>
+                    <h2>Sobre Mí</h2>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum quia quis culpa eveniet et
+                        veritatis,
+                        exercitationem optio? Dolor earum enim distinctio ea praesentium, nostrum tempora aspernatur
+                        odit
+                        exercitationem tempore placeat!</p>
+                </section>
+
+                <section>
+                    <h2>Estudios</h2>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque ex odio pariatur, sit nam unde
+                        quae!
+                        Repellendus illo laborum aut hic rerum saepe. Tempore nobis asperiores consectetur odio
+                        necessitatibus
+                        totam!</p>
+                </section>
+
+                <section>
+                    <h2>Conocimientos y Habilidades</h2>
+                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Sint sunt natus exercitationem iure, ea
+                        assumenda modi et animi aliquid autem cum earum quisquam corrupti aspernatur alias aperiam
+                        magnam
+                        impedit saepe.</p>
+                </section>
             </div>
-        </div>
-        <section>
-            <h2>Sobre Mí</h2>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum quia quis culpa eveniet et veritatis,
-                exercitationem optio? Dolor earum enim distinctio ea praesentium, nostrum tempora aspernatur odit
-                exercitationem tempore placeat!</p>
-        </section>
-
-        <section>
-            <h2>Estudios</h2>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque ex odio pariatur, sit nam unde quae!
-                Repellendus illo laborum aut hic rerum saepe. Tempore nobis asperiores consectetur odio necessitatibus
-                totam!</p>
-        </section>
-
-        <section>
-            <h2>Conocimientos y Habilidades</h2>
-            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Sint sunt natus exercitationem iure, ea
-                assumenda modi et animi aliquid autem cum earum quisquam corrupti aspernatur alias aperiam magnam
-                impedit saepe.</p>
-        </section>
+        </div> <!-- Fin de clase .aboutme-grid -->
     </main>
 
     <footer>
-        Todos los derechos reservados. UlyssesDev
+        Made by UlyssesDev
     </footer>
 </body>
 
