--- a/FirstProject/index.html
+++ b/FirstProject/index.html
@@ -29,75 +29,80 @@
 
     <section class="picture">
         <div class="picture-container">
-            <h2 class="titulo">Diseño y Desarrollo Web <span>Freelancer</span></h2>
-                <svg xmlns="http://www.w3.org/2000/svg" width="88" height="88" viewBox="0 0 24 24" fill="none"
-                    stroke="#ffc107" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round">
-                    <path d="M9 11a3 3 0 1 0 6 0a3 3 0 0 0 -6 0" />
-                    <path d="M17.657 16.657l-4.243 4.243a2 2 0 0 1 -2.827 0l-4.244 -4.243a8 8 0 1 1 11.314 0z" />
-                </svg>
+            <h2>Diseño y Desarrollo Web <span>Freelancer</span></h2>
+            <svg xmlns="http://www.w3.org/2000/svg" width="88" height="88" viewBox="0 0 24 24" fill="none"
+                stroke="#ffc107" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round">
+                <path d="M9 11a3 3 0 1 0 6 0a3 3 0 0 0 -6 0" />
+                <path d="M17.657 16.657l-4.243 4.243a2 2 0 0 1 -2.827 0l-4.244 -4.243a8 8 0 1 1 11.314 0z" />
+            </svg>
 
             <p>La Paz, BCS</p>
 
-            <a href="#">Contactar</a>
+            <a href="#" class="contactar-boton">Contactar</a>
         </div>
     </section>
 
-    <main>
+    <main class="contenedor sombra">
         <h2>Mis Servicios</h2>
 
-        <section>
-            <h3>Diseño Web</h3>
-            <svg xmlns="http://www.w3.org/2000/svg" width="40" height="40" viewBox="0 0 24 24" fill="none"
-                stroke="#000000" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round">
-                <path
-                    d="M12 21a9 9 0 0 1 0 -18c4.97 0 9 3.582 9 8c0 1.06 -.474 2.078 -1.318 2.828c-.844 .75 -1.989 1.172 -3.182 1.172h-2.5a2 2 0 0 0 -1 3.75a1.3 1.3 0 0 1 -1 2.25" />
-                <path d="M8.5 10.5m-1 0a1 1 0 1 0 2 0a1 1 0 1 0 -2 0" />
-                <path d="M12.5 7.5m-1 0a1 1 0 1 0 2 0a1 1 0 1 0 -2 0" />
-                <path d="M16.5 10.5m-1 0a1 1 0 1 0 2 0a1 1 0 1 0 -2 0" />
-            </svg>
+        <div class="servicios">
+            <section>
+                <h3>Diseño Web</h3>
+                <svg xmlns="http://www.w3.org/2000/svg" width="40" height="40" viewBox="0 0 24 24" fill="none"
+                    stroke="#000000" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round">
+                    <path
+                        d="M12 21a9 9 0 0 1 0 -18c4.97 0 9 3.582 9 8c0 1.06 -.474 2.078 -1.318 2.828c-.844 .75 -1.989 1.172 -3.182 1.172h-2.5a2 2 0 0 0 -1 3.75a1.3 1.3 0 0 1 -1 2.25" />
+                    <path d="M8.5 10.5m-1 0a1 1 0 1 0 2 0a1 1 0 1 0 -2 0" />
+                    <path d="M12.5 7.5m-1 0a1 1 0 1 0 2 0a1 1 0 1 0 -2 0" />
+                    <path d="M16.5 10.5m-1 0a1 1 0 1 0 2 0a1 1 0 1 0 -2 0" />
+                </svg>
 
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Blanditiis molestias impedit nobis quasi cumque
-                doloribus</p>
-        </section>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Blanditiis molestias impedit nobis quasi
+                    cumque
+                    doloribus</p>
+            </section>
 
-        <section>
-            <h3>Aplicaciones Web</h3>
-            <svg xmlns="http://www.w3.org/2000/svg" width="40" height="40" viewBox="0 0 24 24" fill="none"
-                stroke="#000000" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round">
-                <path d="M4 10l0 6" />
-                <path d="M20 10l0 6" />
-                <path d="M7 9h10v8a1 1 0 0 1 -1 1h-8a1 1 0 0 1 -1 -1v-8a5 5 0 0 1 10 0" />
-                <path d="M8 3l1 2" />
-                <path d="M16 3l-1 2" />
-                <path d="M9 18l0 3" />
-                <path d="M15 18l0 3" />
-            </svg>
+            <section>
+                <h3>Aplicaciones Web</h3>
+                <svg xmlns="http://www.w3.org/2000/svg" width="40" height="40" viewBox="0 0 24 24" fill="none"
+                    stroke="#000000" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round">
+                    <path d="M4 10l0 6" />
+                    <path d="M20 10l0 6" />
+                    <path d="M7 9h10v8a1 1 0 0 1 -1 1h-8a1 1 0 0 1 -1 -1v-8a5 5 0 0 1 10 0" />
+                    <path d="M8 3l1 2" />
+                    <path d="M16 3l-1 2" />
+                    <path d="M9 18l0 3" />
+                    <path d="M15 18l0 3" />
+                </svg>
 
-            <svg xmlns="http://www.w3.org/2000/svg" width="40" height="40" viewBox="0 0 24 24" fill="none"
-                stroke="#000000" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round">
-                <path
-                    d="M8.286 7.008c-3.216 0 -4.286 3.23 -4.286 5.92c0 3.229 2.143 8.072 4.286 8.072c1.165 -.05 1.799 -.538 3.214 -.538c1.406 0 1.607 .538 3.214 .538s4.286 -3.229 4.286 -5.381c-.03 -.011 -2.649 -.434 -2.679 -3.23c-.02 -2.335 2.589 -3.179 2.679 -3.228c-1.096 -1.606 -3.162 -2.113 -3.75 -2.153c-1.535 -.12 -3.032 1.077 -3.75 1.077c-.729 0 -2.036 -1.077 -3.214 -1.077z" />
-                <path d="M12 4a2 2 0 0 0 2 -2a2 2 0 0 0 -2 2" />
-            </svg>
+                <svg xmlns="http://www.w3.org/2000/svg" width="40" height="40" viewBox="0 0 24 24" fill="none"
+                    stroke="#000000" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round">
+                    <path
+                        d="M8.286 7.008c-3.216 0 -4.286 3.23 -4.286 5.92c0 3.229 2.143 8.072 4.286 8.072c1.165 -.05 1.799 -.538 3.214 -.538c1.406 0 1.607 .538 3.214 .538s4.286 -3.229 4.286 -5.381c-.03 -.011 -2.649 -.434 -2.679 -3.23c-.02 -2.335 2.589 -3.179 2.679 -3.228c-1.096 -1.606 -3.162 -2.113 -3.75 -2.153c-1.535 -.12 -3.032 1.077 -3.75 1.077c-.729 0 -2.036 -1.077 -3.214 -1.077z" />
+                    <path d="M12 4a2 2 0 0 0 2 -2a2 2 0 0 0 -2 2" />
+                </svg>
 
 
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Blanditiis molestias impedit nobis quasi cumque
-                doloribus</p>
-        </section>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Blanditiis molestias impedit nobis quasi
+                    cumque
+                    doloribus</p>
+            </section>
 
-        <section>
-            <h3>E-Commerce</h3>
+            <section>
+                <h3>E-Commerce</h3>
 
-            <svg xmlns="http://www.w3.org/2000/svg" width="40" height="40" viewBox="0 0 24 24" fill="none"
-                stroke="#000000" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round">
-                <path d="M14 12m-3 0a3 3 0 1 0 6 0a3 3 0 1 0 -6 0" />
-                <path d="M12 9.765a3 3 0 1 0 0 4.47" />
-                <path d="M3 5m0 2a2 2 0 0 1 2 -2h14a2 2 0 0 1 2 2v10a2 2 0 0 1 -2 2h-14a2 2 0 0 1 -2 -2z" />
-            </svg>
+                <svg xmlns="http://www.w3.org/2000/svg" width="40" height="40" viewBox="0 0 24 24" fill="none"
+                    stroke="#000000" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round">
+                    <path d="M14 12m-3 0a3 3 0 1 0 6 0a3 3 0 1 0 -6 0" />
+                    <path d="M12 9.765a3 3 0 1 0 0 4.47" />
+                    <path d="M3 5m0 2a2 2 0 0 1 2 -2h14a2 2 0 0 1 2 2v10a2 2 0 0 1 -2 2h-14a2 2 0 0 1 -2 -2z" />
+                </svg>
 
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Blanditiis molestias impedit nobis quasi cumque
-                doloribus</p>
-        </section>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Blanditiis molestias impedit nobis quasi
+                    cumque
+                    doloribus</p>
+            </section>
+        </div><!-- Cierre de clase .servicios -->
     </main>
 
     <section>
@@ -134,7 +139,7 @@
     </section>
 
     <footer>
-        <p>Todos los derechos reservados. UlyssesDev</p>
+        <p>Made by UlyssesDev</p>
     </footer>
 
 </body>
