--- a/FirstProject/nosotros.html
+++ b/FirstProject/nosotros.html
@@ -23,11 +23,11 @@
         <nav class="navegacion-principal contenedor">
             <a href="index.html">Inicio</a>
             <a href="nosotros.html">Sobre mi</a>
-            <a href="#">Contacto</a>
+            <a href="contacto.html">Contacto</a>
         </nav>
     </div>
 
-    <main class="about-me">
+    <main class="about-me sombra">
         <div class="aboutme-grid">
             <section class="presentation">
                 <div class="picture-container">
@@ -42,11 +42,15 @@
             <div>
                 <section>
                     <h2>Sobre Mí</h2>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum quia quis culpa eveniet et
-                        veritatis,
-                        exercitationem optio? Dolor earum enim distinctio ea praesentium, nostrum tempora aspernatur
-                        odit
-                        exercitationem tempore placeat!</p>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque ex odio pariatur, sit nam unde
+                        quae!
+                        Repellendus illo laborum aut hic rerum saepe. Tempore nobis asperiores consectetur odio
+                        necessitatibus Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse vitae, maiores
+                        aliquam saepe qui inventore reiciendis nisi dignissimos suscipit odit tenetur delectus nam
+                        nihil, sunt dicta, aut blanditiis eum perferendis. Lorem ipsum dolor sit amet consectetur
+                        adipisicing elit. Exercitationem facere, non corporis, quaerat reprehenderit dolores libero
+                        maiores ducimus et molestias laboriosam fugit laborum velit eligendi odio ipsam nisi! Ut,
+                        exercitationem.</p>
                 </section>
 
                 <section>
@@ -54,16 +58,26 @@
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque ex odio pariatur, sit nam unde
                         quae!
                         Repellendus illo laborum aut hic rerum saepe. Tempore nobis asperiores consectetur odio
-                        necessitatibus
+                        necessitatibus Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse vitae, maiores
+                        aliquam saepe qui inventore reiciendis nisi dignissimos suscipit odit tenetur delectus nam
+                        nihil, sunt dicta, aut blanditiis eum perferendis. Lorem ipsum dolor sit amet consectetur
+                        adipisicing elit. Exercitationem facere, non corporis, quaerat reprehenderit dolores libero
+                        maiores ducimus et molestias laboriosam fugit laborum velit eligendi odio ipsam nisi! Ut,
+                        exercitationem.
                         totam!</p>
                 </section>
 
                 <section>
                     <h2>Conocimientos y Habilidades</h2>
-                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Sint sunt natus exercitationem iure, ea
-                        assumenda modi et animi aliquid autem cum earum quisquam corrupti aspernatur alias aperiam
-                        magnam
-                        impedit saepe.</p>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque ex odio pariatur, sit nam unde
+                        quae!
+                        Repellendus illo laborum aut hic rerum saepe. Tempore nobis asperiores consectetur odio
+                        necessitatibus Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse vitae, maiores
+                        aliquam saepe qui inventore reiciendis nisi dignissimos suscipit odit tenetur delectus nam
+                        nihil, sunt dicta, aut blanditiis eum perferendis. Lorem ipsum dolor sit amet consectetur
+                        adipisicing elit. Exercitationem facere, non corporis, quaerat reprehenderit dolores libero
+                        maiores ducimus et molestias laboriosam fugit laborum velit eligendi odio ipsam nisi! Ut,
+                        exercitationem.</p>
                 </section>
             </div>
         </div> <!-- Fin de clase .aboutme-grid -->
