--- a/FirstProject/index.html
+++ b/FirstProject/index.html
@@ -23,7 +23,7 @@
         <nav class="navegacion-principal contenedor">
             <a href="index.html">Inicio</a>
             <a href="nosotros.html">Sobre mi</a>
-            <a href="#">Contacto</a>
+            <a href="contacto.html">Contacto</a>
         </nav>
     </div>
 
